--- a/src/main/resources/static/addEmployee.html
+++ b/src/main/resources/static/addEmployee.html
@@ -2,31 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="stylesheet.css" rel="stylesheet">
     <title>Add New Employee</title>
-    <style>
-        * {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-    </style>
 </head>
 <body>
-<header>
-    <h1>Add New Employee</h1>
-</header>
+<div>
+    <header>
+        <h1>Add New Employee</h1>
+        <hr class="rounded">
+    </header>
     <form action="addEmployee.html">
         <label for="eid">EID:</label>
         <br>
-        <input type="text" id="eid" placeholder="e.g. 93612">
+        <input id="eid" placeholder="e.g. 93612" type="text">
         <br>
         <br>
         <label for="name">Name:</label>
         <br>
-        <input type="text" id="name" placeholder="e.g. John Doe">
+        <input id="name" placeholder="e.g. John Doe" type="text">
         <br>
         <br>
         <label for="positions">Select a position:</label>
         <br>
-        <select name="positions" id="positions">
+        <select id="positions" name="positions">
             <option>none</option>
             <option>E-0</option>
             <option>E-1</option>
@@ -43,7 +41,7 @@
         <br>
         <label for="sid">Select a supervisor:</label>
         <br>
-        <select name="positions" id="sid">
+        <select id="sid" name="positions">
             <option>none</option>
             <option>15330</option>
             <option>22863</option>
@@ -70,15 +68,21 @@
         <br>
         <label for="yos">Years of Service:</label>
         <br>
-        <input type="text" id="yos" placeholder="e.g. 6">
+        <input id="yos" placeholder="e.g. 6" type="text">
         <br>
         <br>
         <label for="salary">Salary:</label>
         <br>
-        <input type="text" id="salary" placeholder="e.g. 45,000">
+        <input id="salary" placeholder="e.g. 45,000" type="text">
         <br>
-        <br><input type="submit" value="Submit">
+        <br>
+        <input type="submit" value="Submit">
         <input type="reset" value="Reset">
     </form>
+    <br>
+    <form action="index.html">
+        <input type="submit" value="Return to Index">
+    </form>
+</div>
 </body>
 </html>
